[package]
name = "assertr-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
assertr = { path = "../assertr", features = ["std"] }
indoc = "2.0.5"
serde = "1.0.210"
serde_json = "1.0.128"
trybuild = { version = "1.0.99", features = ["diff"] }

[dependencies]
darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
