[package]
name = "assertr-derive"
version = "0.2.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lpotthast/assertr"
description = """
Derive AssertrEq implementations.
"""
categories = ["development-tools::testing", "no-std"]
keywords = ["assertions", "assert", "assert-that", "testing"]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["extra-traits"] }

[dev-dependencies]
assertr = { path = "../assertr", features = ["std", "derive"] }
indoc = "2.0.5"
trybuild = { version = "1.0.103", features = ["diff"] }
