[package]
name = "assertr"
version = "0.3.4"
edition = "2024"
rust-version = "1.85.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lpotthast/assertr"
description = """
Fluent assertions for the Rust programming language.
"""
categories = ["development-tools::testing", "no-std"]
keywords = ["assertions", "assert", "assert-that", "testing"]

[features]
default = ["std", "num"]
std = ["num/std"]
derive = ["dep:assertr-derive"]
num = ["dep:num"]
jiff = ["dep:jiff"]
tokio = ["dep:tokio"]
serde = ["dep:serde", "dep:serde_json", "dep:toml"]
reqwest = ["dep:reqwest"]
libm = ["dep:libm", "num/libm"]

[dependencies]
assertr-derive = { version = "0.2.0", optional = true, path = "../assertr-derive" }
indoc = "2.0.5"
jiff = { version = "0.2.13", optional = true }
num = { version = "0.4.3", optional = true, default-features = false }
reqwest = { version = "0.12.12", optional = true }
libm = { version = "0.2.11", optional = true }
serde = { version = "1.0.218", optional = true, features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
toml = { version = "0.8.20", optional = true }
tokio = { version = "1.43.0", optional = true, features = ["full"] }

[dev-dependencies]
assertr = { path = ".", features = ["std", "derive", "jiff", "reqwest", "tokio", "serde"] }
# ^... This is a somewhat hacky way to say: Please enable the "std" and "tokio" features for all tests.
mockito = "1.6.1"
tokio = { version = "1.43.0", features = ["full"] }
