[package]
name = "assertr"
version = "0.4.4"
edition = "2024"
rust-version = "1.89.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lpotthast/assertr"
description = """
Fluent assertions for the Rust programming language.
"""
categories = ["development-tools::testing", "no-std"]
keywords = ["assertions", "assert", "assert-that", "testing"]

[features]
# Aggregates
default = ["std", "num"]
full = [
    "derive",
    "http",
    "jiff",
    "libm",
    "num",
    "program",
    "reqwest",
    "serde",
    "std",
    "tokio",
]
# Concrete
derive = ["dep:assertr-derive"]
http = ["dep:http"]
jiff = ["dep:jiff"]
libm = ["dep:libm", "num/libm"]
num = ["dep:num"]
program = ["dep:which"]
reqwest = ["dep:reqwest"]
serde = ["dep:serde", "dep:serde_json", "dep:toml"]
std = ["num/std"]
tokio = ["dep:tokio"]

[dependencies]
assertr-derive = { version = "0.2.0", optional = true, path = "../assertr-derive" }
futures = "0.3.31"
http = { version = "1.3.1", optional = true }
indoc = "2.0.5"
jiff = { version = "0.2.13", optional = true }
libm = { version = "0.2.11", optional = true }
num = { version = "0.4.3", optional = true, default-features = false }
reqwest = { version = "0.12.12", optional = true }
serde = { version = "1.0.218", optional = true, features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
tokio = { version = "1.43.0", optional = true, features = ["full"] }
toml = { version = "0.9.7", optional = true }
which = { version = "8.0.0", optional = true, default-features = false, features = ["real-sys"] }

[dev-dependencies]
assertr = { path = ".", features = ["full"] }
# ^... This enables all features for all tests!
mockito = "1.6.1"
tokio = { version = "1.43.0", features = ["full"] }
