[package]
name = "assertr"
version = "0.5.1"
edition = "2024"
rust-version = "1.89.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lpotthast/assertr"
description = """
Fluent assertions for the Rust programming language.
"""
categories = ["development-tools::testing", "no-std"]
keywords = ["assertions", "assert", "assert-that", "testing"]

[features]
default = ["std", "num"]
full = [
    "derive",
    "fluent",
    "http",
    "jiff",
    "libm",
    "num",
    "program",
    "reqwest",
    "rootcause",
    "serde",
    "std",
    "tokio",
]
std = ["num/std"]
derive = ["dep:assertr-derive"]
fluent = ["dep:assertr-derive"]
num = ["dep:num"]
http = ["dep:http"]
jiff = ["dep:jiff"]
tokio = ["dep:tokio"]
serde = ["dep:serde", "dep:serde_json", "dep:toml"]
program = ["dep:which"]
reqwest = ["dep:reqwest"]
rootcause = ["dep:rootcause"]
libm = ["dep:libm", "num/libm"]

[dependencies]
assertr-derive = { version = "0.2.5", optional = true, path = "../assertr-derive" }
futures = "0.3.31"
http = { version = "1.3.1", optional = true }
indoc = "2.0.5"
jiff = { version = "0.2.13", optional = true }
libm = { version = "0.2.11", optional = true }
num = { version = "0.4.3", optional = true, default-features = false }
reqwest = { version = "0.12.12", optional = true }
rootcause = { version = "0.12.1", optional = true, default-features = false }
serde = { version = "1.0.218", optional = true, features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
tokio = { version = "1.43.0", optional = true, features = ["full"] }
toml = { version = "0.8.20", optional = true }
which = { version = "8.0.0", optional = true, default-features = false, features = ["real-sys"] }

[dev-dependencies]
assertr = { path = ".", features = ["full"] }
# ^... This enables all features for all tests!
mockito = "1.6.1"
tokio = { version = "1.43.0", features = ["full"] }
